# swarm_bots

./: .gitignore  LICENSE  README.md  do-docs.bash
.github/workflows/: run-unit-test-and-upload-codecov.yml
documents/: Presentation.pptx  cppcheck.txt  cpplint.txt
mock/: README.md  mock.cpp  mock.hpp  mock.py  mock_test.cpp  test_mock.cpp
screenshots/log/: latest_graph
src/my_controller/: README.md
src/swarm_library/: CMakeLists.txt  README.md  compile_commands.json  package.xml
src/swarm_library/docs/html/: annotated.html  classMultiRobotPublisher-members.html  classMultiRobotPublisher.html  classMultiRobotPublisher__coll__graph.map  classMultiRobotPublisher__coll__graph.md5  classMultiRobotPublisher_ad5d8eee7a0e8b30c3da8ee11dec47378_icgraph.map  classMultiRobotPublisher_ad5d8eee7a0e8b30c3da8ee11dec47378_icgraph.md5  classMultiRobotPublisher_af7494b70908f31704fad9921532188ff_icgraph.map  classMultiRobotPublisher_af7494b70908f31704fad9921532188ff_icgraph.md5  classes.html  dir_000002_000000.html  dir_000003_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_594521b188c6beebd5e1b3a3eff35a6d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  multi__robot__publisher_8cpp.html  multi__robot__publisher_8cpp__incl.map  multi__robot__publisher_8cpp__incl.md5  multi__robot__publisher_8hpp.html  multi__robot__publisher_8hpp__dep__incl.map  multi__robot__publisher_8hpp__dep__incl.md5  multi__robot__publisher_8hpp__incl.map  multi__robot__publisher_8hpp__incl.md5  multi__robot__publisher_8hpp_source.html  src_2main_8cpp.html  src_2main_8cpp__incl.map  src_2main_8cpp__incl.md5  src_2main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  src_2main_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  test_2main_8cpp.html  (+7 more)
src/swarm_library/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/swarm_library/include/: my_dummy_lib_funct1.hpp  path.hpp
src/swarm_library/include/swarm_library/: multi_robot_publisher.hpp
src/swarm_library/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/swarm_library/install/swarm_library/include/: path.hpp
src/swarm_library/install/swarm_library/share/swarm_library/: package.bash  package.zsh
src/swarm_library/install/swarm_library/share/swarm_library/cmake/: swarm_library-export.cmake
src/swarm_library/log/: latest_build
src/swarm_library/src/: CMakeLists.txt  linear_path.cpp  main.cpp  multi_robot_publisher.cpp  my_dummy_lib_funct2.cpp  path.cpp  rough.py
src/swarm_library/test/: CMakeLists.txt  main.cpp  test.cpp
src/turtlebot_swarm/: CMakeLists.txt  compile_commands.json  package.xml
src/turtlebot_swarm/include/: agent.hpp
src/turtlebot_swarm/launch/: demo_python.launch.py  run_demo.launch.py
src/turtlebot_swarm/scripts/: path_points.py
src/turtlebot_swarm/src/: agent.cpp  control.cpp  main.cpp  path_points.cpp  publisher_member_function.cpp  subscriber_member_function.cpp
src/turtlebot_swarm/test/: CMakeLists.txt  basic_test.cpp  test.cpp
